--- a/index.html
+++ b/index.html
@@ -1,28 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Linux Mint</title>
-    <link rel="stylesheet" href="styles/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
-
-</head>
-<header>
+    <link rel="stylesheet" href="styles/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <header>
     <div class="menu">
-        <div class="menu-line">
-            <div class="menu-content">
-                <a href="">Főoldal</a>
-                <a href="">Történet</a>
-            </div>
+      <div class="menu-logo">
+        <img src="assets/icons8-linux-mint-60.png" alt="Linux Mint" />
+      </div>
+      <div class="menu-line">
+        <div class="menu-content">
+          <a href="">Főoldal</a>
+          <a href="">Történet</a>
+          <a href="">Letöltés</a>
         </div>
+      </div>
     </div>
-</header>
-<body>
+  </header>
+  <body>
     <div class="main-container">
-                
+      <div class="main-title">
+        <h1>
+          <span class="mint-style">Linux Mint</span>, egy
+          <span class="mint-offer">ingyenes</span> és
+          <span class="mint-offer">open source</span> Linux distro
+        </h1>
+      </div>
+      <div class="preview-img">
+        <img
+          src="assets/Linux_Mint_21__Vanessa__(Cinnamon).png"
+          alt="Example linux environment"
+        />
+      </div>
     </div>
-</body>
+  </body>
 </html>
