typewriter effect, some more content and fixes

--- a/index.html
+++ b/index.html
@@ -41,6 +41,43 @@
           alt="Example linux environment"
         />
       </div>
+      <div class="advantages-title">
+        <h2>Linux Mint előnyei</h2>
+      </div>
+      <div class="advantages">
+        <div class="advantages-item">
+          <div class="advantages-item-icon">
+            <img src="assets/secure.png" alt="Secure" />
+          </div>
+          <div class="advantages-item-desc">
+            <p>Biztonságos és megbízható</p>
+          </div>
+        </div>
+        <div class="advantages-item">
+          <div class="advantages-item-icon">
+            <img src="assets/group-users.png" alt="Community" />
+          </div>
+          <div class="advantages-item-desc">
+            <p>Nagy, összetartó közösség</p>
+          </div>
+        </div>
+        <div class="advantages-item">
+          <div class="advantages-item-icon">
+            <img src="assets/icons8-box-512.png" alt="Box" />
+          </div>
+          <div class="advantages-item-desc">
+            <p>Egyből működik telepítés után</p>
+          </div>
+        </div>
+        <div class="advantages-item">
+          <div class="advantages-item-icon">
+            <img src="assets/computer.png" alt="Box" />
+          </div>
+          <div class="advantages-item-desc">
+            <p>Elfut szinte bármin</p>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
