--- a/index.html
+++ b/index.html
@@ -78,6 +78,55 @@
           </div>
         </div>
       </div>
+      <div class="download-container">
+        <div class="download-title">
+          <h1>Letöltés</h1>
+        </div>
+        <div class="download-content">
+          <div class="download-item">
+            <table>
+              <tr>
+                <th>Verzió</th>
+                <th>Becenév</th>
+                <th>Link</th>
+              </tr>
+              <tr>
+                <td>22.1</td>
+                <td>Xia</td>
+                <td>
+                  <a
+                    href="https://linuxmint.com/edition.php?id=319"
+                    target="_blank"
+                    >Letöltés</a
+                  >
+                </td>
+              </tr>
+              <tr>
+                <td>22</td>
+                <td>Wilma</td>
+                <td>
+                  <a
+                    href="https://linuxmint.com/edition.php?id=316"
+                    target="_blank"
+                    >Letöltés</a
+                  >
+                </td>
+              </tr>
+              <tr>
+                <td>21.3</td>
+                <td>Virginia</td>
+                <td>
+                  <a
+                    href="https://linuxmint.com/edition.php?id=311"
+                    target="_blank"
+                    >Letöltés</a
+                  >
+                </td>
+              </tr>
+            </table>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
