--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
       rel="stylesheet"
     />
+    <script src="js/index.js"></script>
   </head>
   <header>
     <div class="menu">
@@ -21,7 +22,7 @@
         <div class="menu-content">
           <a href="">Főoldal</a>
           <a href="">Történet</a>
-          <a href="">Letöltés</a>
+          <a href="letoltes.html">Letöltés</a>
         </div>
       </div>
     </div>
@@ -42,7 +43,7 @@
         />
       </div>
       <div class="advantages-title">
-        <h2>Linux Mint előnyei</h2>
+        <h2>Előnyei</h2>
       </div>
       <div class="advantages">
         <div class="advantages-item">
@@ -78,52 +79,31 @@
           </div>
         </div>
       </div>
-      <div class="download-container">
+      <div class="story-page hidden">
+        <div class="story-page-title">
+          <h1>Történet</h1>
+        </div>
+        <div class="story-page-content">
+          <a href="">
+            <div class="story-link">
+              <img src="assets/right-arrow.png" alt="Linux Mint" />
+              <p>Linux Mint története</p>
+            </div>
+          </a>
+        </div>
+      </div>
+      <div class="download-container hidden">
         <div class="download-title">
           <h1>Letöltés</h1>
         </div>
         <div class="download-content">
-          <div class="download-item">
-            <table>
-              <tr>
-                <th>Verzió</th>
-                <th>Becenév</th>
-                <th>Link</th>
-              </tr>
-              <tr>
-                <td>22.1</td>
-                <td>Xia</td>
-                <td>
-                  <a
-                    href="https://linuxmint.com/edition.php?id=319"
-                    target="_blank"
-                    >Letöltés</a
-                  >
-                </td>
-              </tr>
-              <tr>
-                <td>22</td>
-                <td>Wilma</td>
-                <td>
-                  <a
-                    href="https://linuxmint.com/edition.php?id=316"
-                    target="_blank"
-                    >Letöltés</a
-                  >
-                </td>
-              </tr>
-              <tr>
-                <td>21.3</td>
-                <td>Virginia</td>
-                <td>
-                  <a
-                    href="https://linuxmint.com/edition.php?id=311"
-                    target="_blank"
-                    >Letöltés</a
-                  >
-                </td>
-              </tr>
-            </table>
+          <div class="story-page-content">
+            <a href="letoltes.html">
+              <div class="story-link">
+                <img src="assets/downloads.png" alt="Linux Mint" />
+                <p>Kattints ide</p>
+              </div>
+            </a>
           </div>
         </div>
       </div>
