Story page created, filled with content

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="menu-line">
         <div class="menu-content">
           <a href="">Főoldal</a>
-          <a href="">Történet</a>
+          <a href="tortenet.html">Történet</a>
           <a href="letoltes.html">Letöltés</a>
         </div>
       </div>
@@ -37,10 +37,18 @@
         </h1>
       </div>
       <div class="preview-img">
-        <img
-          src="assets/Linux_Mint_21__Vanessa__(Cinnamon).png"
-          alt="Example linux environment"
-        />
+        <div class="next-img">
+          <img src="assets/xfce.png" alt="" />
+        </div>
+        <div class="main-img">
+          <img
+            src="assets/Linux_Mint_21__Vanessa__(Cinnamon).png"
+            alt="Example linux environment"
+          />
+        </div>
+        <div class="prev-img">
+          <img src="assets/mate.png" alt="" />
+        </div>
       </div>
       <div class="advantages-title">
         <h2>Előnyei</h2>
@@ -84,7 +92,7 @@
           <h1>Történet</h1>
         </div>
         <div class="story-page-content">
-          <a href="">
+          <a href="tortenet.html">
             <div class="story-link">
               <img src="assets/right-arrow.png" alt="Linux Mint" />
               <p>Linux Mint története</p>
