--- a/letoltes.html
+++ b/letoltes.html
@@ -20,7 +20,7 @@
       <div class="menu-line">
         <div class="menu-content">
           <a href="index.html">Főoldal</a>
-          <a href="">Történet</a>
+          <a href="tortenet.html">Történet</a>
           <a href="letoltes.html">Letöltés</a>
         </div>
       </div>
