Animations, picture slide, ect...

--- a/index.html
+++ b/index.html
@@ -38,16 +38,19 @@
       </div>
       <div class="preview-img">
         <div class="next-img">
-          <img src="assets/xfce.png" alt="" />
+          <img src="assets/xfce.png" alt="" id="next-img-js" />
         </div>
         <div class="main-img">
+          <a class="prev-b" id="prev">&#10094;</a>
           <img
-            src="assets/Linux_Mint_21__Vanessa__(Cinnamon).png"
+            src="assets/main.png"
             alt="Example linux environment"
+            id="main"
           />
+          <a class="next-b" id="next">&#10095;</a>
         </div>
         <div class="prev-img">
-          <img src="assets/mate.png" alt="" />
+          <img src="assets/mate.png" alt="" id="prev-img-js" />
         </div>
       </div>
       <div class="advantages-title">
